# API-AluguelVeiculo

./: .gitignore  README.md  database.py  main.py  pyproject.toml  reset-banco.py  script-carga.py
docs/: divisao-tarefas.txt
migrations/: env.py  script.py.mako
migrations/versions/: 71978c707258_banco_de_dados.py  78b9caf29d64_criar_tabelas_document_e_veiculo.py  a1ca91f9a3bc_corrigindo_questao_do_fuso_horario.py  a5b2fd49d1c3_.py  abeaae17c188_.py  b1eb352eca3c_.py  efacb5de42bd_criar_tabelas_document_e_veiculo.py  efb558eb0012_corrigindo_estrutura_do_banco.py  f59c537d44cc_initial.py
modelos/: __init__.py  aluguel.py  cliente.py  documento.py  ofertador.py  pagamento.py  veiculo.py
models/: __init__.py  document.py  veiculo.py
rotas/: alugueis.py  clientes.py  documents.py  ofertadores.py  pagamentos.py  veiculos.py
