[project]
name = "api-aluguelveiculo"
version = "0.1.0"
description = "API assíncrona de aluguel de veículos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi-pagination>=0.15.12",
    "fastapi[standard]>=0.136.1",
    "sqlmodel>=0.0.38",
]
